fix(Overlay/OverlayTrigger): Fix overflow scroll.

--- a/packages/core/src/overlay-trigger/style/index.less
+++ b/packages/core/src/overlay-trigger/style/index.less
@@ -9,4 +9,11 @@
   overflow: inherit;
   width: auto;
   height: auto;
+  .w-overlay-container {
+    position: relative;
+    overflow: inherit;
+  }
+  .w-overlay-content {
+    margin: 0;
+  }
 }
